Update CHANGELOG for version 1.0.0